[gd_scene load_steps=2 format=3 uid="uid://ctq5bwxyhv6uk"]

[ext_resource type="Script" uid="uid://x0lj2pngskl8" path="res://Scenes/world.gd" id="1_a02cp"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_a02cp")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="EasyButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Easy
"

[node name="MediumButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="HardButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Hard"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
